2004-06-25  Richard Hult  <richard@imendio.com>

	* src/planner-ttable-row.c: (recalc_bounds),
	(ttable_row_resource_notify_cb),
	(ttable_row_assignment_notify_cb): Don't redraw unless the
	geometry is changed.

2004-06-25  Richard Hult  <richard@imendio.com>

	* src/planner-ttable-*.[ch]: Indent this so it at least remotely
	looks like the rest of the planner code. Sigh.  Do some of the
	same optimizations to the drawing code as was done to the gantt
	chart recently.

2004-06-25  Setul Patel   <setulkumarpatel@yahoo.com>

	* data/ui/gantt-view.ui:
	* data/ui/task-view.ui:
	* data/ui/resource-view.ui: Fix bug #144466.

2004-06-25  Richard Hult  <richard@imendio.com>

	* Makefile.am:
	* data/mime/Makefile.am:
	* data/mime/planner.keys.in:
	* dotnet/libplanner/Makefile.am:
	* dotnet/libplanner/libplanner-api.xml:
	* dotnet/samples/Example01.cs:
	* dotnet/samples/Example10.cs:
	* dotnet/samples/Makefile.am: Fix distcheck.

	* libplanner/mrp-sql.c: (sql_get_last_error), (get_int), (get_id),
	(get_string), (get_boolean), (get_float):
	* src/planner-sql-plugin.c: (get_int), (get_string):
	* src/planner-task-dialog.c: Fix leaks and warnings.

2004-06-23 Alvaro del Castillo  <acs@barrapunto.com>
	
	* src/planner-calendar-dialog.c
	* src/planner-day-type-dialog.c
	* src/planner-group-dialog.c
	* src/planner-phase-dialog.c
	* src/planner-project-properties.c
	* src/planner-resource-cmd.c
	* src/planner-resource-dialog.c
	* src/planner-resource-view.c
	* src/planner-task-cmd.c
	* src/planner-task-dialog.c
	* src/planner-task-tree.c:
	Change strings from undo command to fix bug #144742 and
	use the new undo API call planner_cmd_new which fix the
	more hard change in bug #144734.

2004-06-23  Richard Hult  <richard@imendio.com>

	* src/planner-ttable-model.c (ttable_model_resource_removed_cb):
	Disconnect signals when resources are removed. Fixes bug #141120.

2004-06-22  Richard Hult  <richard@imendio.com>

	* src/planner-window.c: Fix bug #140335, save UI state, based on